--- a/Pages/Menukort/Index.cshtml
+++ b/Pages/Menukort/Index.cshtml
@@ -1,4 +1,34 @@
 ﻿@page
+@using mini_big_mammas_pizzaria.Model;
 @model mini_big_mammas_pizzaria.Pages.Menukort.IndexModel
 @{
+    ViewData["Title"] = "Pizzaer";
 }
+
+<h1 class="jumbotron">Oversigt over Pizzaer</h1>
+
+<table class="table-hover">
+    <thead>
+        <tr>
+            <th>Nummer</th>
+            <th>Navn</th>
+            <th>Beskrivelse</th>
+        </tr>
+    </thead>
+    <tbody>
+        @foreach (Pizza p in Model.)
+        {
+            <tr>
+                <td>@k.</td>
+                <td>@k.Navn</td>
+                <td>@k.Tlf</td>
+
+            </tr>
+        }
+    </tbody>
+</table>
+
+<form method="post">
+    <input type="submit" value="opret" />
+</form>
+<p>That was it</p>
