--- a/Pages/Menukort/PizzaMenu.cshtml
+++ b/Pages/Menukort/PizzaMenu.cshtml
@@ -1,33 +1,34 @@
 ﻿@page
+@using mini_big_mammas_pizzaria.Model;
 @model mini_big_mammas_pizzaria.Pages.Menukort.PizzaMenuModel
 @{
-    ViewData["Title"] = "Kunder";
+    ViewData["Title"] = "Pizza Menu";
 }
 
-<h1 class="jumbotron">Vis alle kunder</h1>
+<h1 class="jumbotron">Pizza Menu</h1>
 
 <table class="table-hover">
     <thead>
         <tr>
-            <th>Kunde nummer</th>
+            <th>Nummer</th>
             <th>Navn</th>
-            <th>Telfonnummer</th>
+            <th>Beskivelse</th>
+            <th>pris</th>
         </tr>
     </thead>
     <tbody>
-        @foreach (Kunde k in Model.Kunder)
+        @foreach (Pizza p in Model.PizzaMenukort)
         {
             <tr>
-                <td>@k.KundeNummer</td>
-                <td>@k.Navn</td>
-                <td>@k.Tlf</td>
+                <td>@p.Number</td>
+                <td>@p.Name</td>
+                <td>@p.Toppings</td>
+                <td>@p.Price</td>
+                
 
             </tr>
         }
     </tbody>
 </table>
 
-<form method="post">
-    <input type="submit" value="opret" />
-</form>
 <p>That was it</p>
