--- a/Pages/Menukort/PizzaMenu.cshtml
+++ b/Pages/Menukort/PizzaMenu.cshtml
@@ -22,7 +22,7 @@
             <tr>
                 <td>@p.Number</td>
                 <td>@p.Name</td>
-                <td>@p.Toppings</td>
+                <td>@p.GetToppings()</td>
                 <td>@p.Price</td>
                 
 
