--- a/Pages/Menukort/BurgerMenu.cshtml
+++ b/Pages/Menukort/BurgerMenu.cshtml
@@ -13,6 +13,7 @@
         <tr>
             <th>nummer</th>
             <th>Navn</th>
+            <th>Buntype</th>
             <th>Beskrivelse</th>
             <th>pris</th>
         </tr>
@@ -24,7 +25,8 @@
             <tr>
                 <td>@b.Number</td>
                 <td>@b.Name</td>
-                <td>@b.Description</td>
+                <th>@b.Bun</th>
+                <td>@b.GetToppings()</td>
                 <td>@b.Price</td>
 
             </tr>
