--- a/Pages/BurgerMenu/Index.cshtml
+++ b/Pages/BurgerMenu/Index.cshtml
@@ -1,6 +1,6 @@
 ﻿@page
 @using mini_big_mammas_pizzaria.Model;
-@model mini_big_mammas_pizzaria.Pages.Menukort.BurgerMenuModel
+@model BurgerMenuModel
 
 @{
     ViewData["Title"] = "Burger";
