--- a/Pages/AddNewPizza/Index.cshtml
+++ b/Pages/AddNewPizza/Index.cshtml
@@ -7,18 +7,20 @@
 
 <form method="post">
     <div class="form-group>">
-        <label>Kunde nummer</label><br />
-        <input class="form-control" asp-for="@Model.NytKundeNummer" /><br />
+        <label>Pizza Nummer</label><br />
+        <input class="form-control" asp-for="@Model." /><br />
 
-        <label>Kunde navn</label><br />
-        <input class="form-control" asp-for="@Model.NytKundeNavn" /><br />
-        <span asp-validation-for="@Model.NytKundeNavn" class="text-danger"></span><br />
-
-
-        <label>Kunde telefon</label><br />
-        <input class="form-control" asp-for="@Model.NytKundetlf" /><br />
+        <label>Pizza Navn</label><br />
+        <input class="form-control" asp-for="@Model." /><br />
+        <span asp-validation-for="@Model." class="text-danger"></span><br />
 
 
-        <input type="submit" value="Opret Ny Kunde" class="btn btn-success" />
+        <label>Pizza Pris</label><br />
+        <input class="form-control" asp-for="@Model." /><br />
+
+        <label>Pizza Topping</label><br />
+        <input class="form-control" asp-for="@Model." /><br />
+
+        <input type="submit" value="Opret Ny Pizza" class="btn btn-success" />
     </div>
 </form>
