--- a/Pages/PizzaMenu/Index.cshtml
+++ b/Pages/PizzaMenu/Index.cshtml
@@ -17,7 +17,7 @@
         </tr>
     </thead>
     <tbody>
-        @foreach (Pizza p in Model.PizzaMenukort)
+        @foreach (Pizza p in Model.Pizza)
         {
             <tr>
                 <td>@p.Number</td>
