Forsøg med billeder

--- a/Pages/Shared/_Layout.cshtml
+++ b/Pages/Shared/_Layout.cshtml
@@ -36,6 +36,8 @@
             </div>
         </nav>
     </header>
+    <img src="Logo-med-hvid-baggrund.png" />
+
     <div class="container">
         <main role="main" class="pb-3">
             @RenderBody()
