--- a/Pages/PizzaMenu/Index.cshtml
+++ b/Pages/PizzaMenu/Index.cshtml
@@ -24,6 +24,7 @@
                 <td>@p.Name</td>
                 <td>@p.GetToppings()</td>
                 <td>@p.Price</td>
+                <td><a asp-page="ChangeItem" asp-route-nummer="@p.Number">Ændre</a></td>
                 
 
             </tr>
