--- a/Pages/DrikkevarerMenu/Index.cshtml
+++ b/Pages/DrikkevarerMenu/Index.cshtml
@@ -1,4 +1,35 @@
 ﻿@page
-@model mini_big_mammas_pizzaria.Pages.DrikkevarerMenu.DrikkevarerMenuModel
+@using mini_big_mammas_pizzaria.Model;
+@model DrinksMenuModel;
+
 @{
+    ViewData["Title"] = "Drikkevarer";
 }
+
+<h1 class="jumbotron">Burger Menu</h1>
+
+<table class="table-hover">
+    <thead>
+        <tr>
+            <th>nummer</th>
+            <th>Navn</th>
+            <th>Buntype</th>
+            <th>Beskrivelse</th>
+            <th>pris</th>
+        </tr>
+    </thead>
+    <tbody>
+
+        @foreach (Drinks b in Model.)
+        {
+            <tr>
+                <td>@b.Number</td>
+                <td>@b.Name</td>
+                <td>@b.GetToppings()</td>
+                <td>@b.Price</td>
+
+            </tr>
+        }
+    </tbody>
+</table>
+<p>That was it</p>
