--- a/Pages/PizzaMenu/Index.cshtml
+++ b/Pages/PizzaMenu/Index.cshtml
@@ -12,7 +12,7 @@
         <tr>
             <th>Nummer</th>
             <th>Navn</th>
-            <th>Beskivelse</th>
+            <th>Beskrivelse</th>
             <th>pris</th>
         </tr>
     </thead>
