--- a/Pages/Shared/_Layout.cshtml
+++ b/Pages/Shared/_Layout.cshtml
@@ -29,6 +29,9 @@
                             <a class="nav-link text-dark" asp-area="" asp-page="/BurgerMenu/Index">BurgerMenu</a>
                         </li>
                         <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-page="/DrikkevarerMenu/Index">DrikkevarerMenu</a>
+                        </li>
+                        <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-page="/AddNewPizza/Index">Tilføj Ny Pizza - Kun til ejeren!</a>
                         </li>
                     </ul>
