--- a/Pages/PizzaMenu/Index.cshtml
+++ b/Pages/PizzaMenu/Index.cshtml
@@ -17,12 +17,13 @@
         </tr>
     </thead>
     <tbody>
-        @foreach (Pizza p in Model.Pizza)
-        {
+        @foreach (Menuitems p in Model.Pizza)
+        {   
             <tr>
+
                 <td>@p.Number</td>
                 <td>@p.Name</td>
-                <td>@p.GetToppings()</td>
+                @* <td>@p.GetToppings()</td> *@
                 <td>@p.Price</td>
                 <td><a asp-page="/Change/ChangeItem" asp-route-nummer="@p.Number">Ændre</a></td>
                 
