--- a/Pages/DrikkevarerMenu/Index.cshtml
+++ b/Pages/DrikkevarerMenu/Index.cshtml
@@ -17,7 +17,7 @@
     </thead>
     <tbody>
 
-        @foreach (Drinks b in Model.DrinksMenukort)
+        @foreach (Items b in Model.DrinksMenukort)
         {
             <tr>
                 <td>@b.Name</td>
