--- a/Pages/BurgerMenu/Index.cshtml
+++ b/Pages/BurgerMenu/Index.cshtml
@@ -20,13 +20,13 @@
     </thead>
     <tbody>
 
-        @foreach (Burger b in Model.BurgerMenukort)
+        @foreach (Items b in Model.BurgerMenukort)
         {
             <tr>
                 <td>@b.Number</td>
                 <td>@b.Name</td>
-                <th>@b.Bun</th>
-                <td>@b.GetToppings()</td>
+                @* <th>@b.Bun</th>
+                <td>@b.GetToppings()</td> *@
                 <td>@b.Price</td>
 
             </tr>
