--- a/Pages/AddNewPizza/Index.cshtml
+++ b/Pages/AddNewPizza/Index.cshtml
@@ -16,10 +16,12 @@
 
         <label>Pizza Pris</label><br />
         <input class="form-control" asp-for="@Model.NyPris" /><br />
-
-        <label>Pizza Topping</label><br />
+        
+        <label>Pizza Topping</label> 
+        <button type="button" name="action" value="TilføjTopping" class="btn btn-warning">Tilføj Topping</button> 
+        <label>@Model.NyDescription</label>
         <input class="form-control" asp-for="@Model.NyDescription" /><br />
 
-        <input type="submit" value="Opret Ny Pizza" class="btn btn-success" />
+        <input type="submit" value="Opret Ny Pizza" class="btn btn-success">
     </div>
 </form>
