--- a/Pages/Change/ChangeItem.cshtml
+++ b/Pages/Change/ChangeItem.cshtml
@@ -18,7 +18,7 @@
         <label>Pizza Pris</label><br />
         <input class="form-control" asp-for="@Model.NyPris" /><br />
 
-        <label>Pizza Topping</label><br />
+        <label>Pizza Topping</label> - @Model.NyDescription<br />
         <input class="form-control" asp-for="@Model.NyDescription" /><br />
 
         <input type="submit" value="Ændre pizza" class="btn btn-success" asp-page-handler="Change" />
