--- a/Pages/AddNewPizza/Index.cshtml
+++ b/Pages/AddNewPizza/Index.cshtml
@@ -18,10 +18,10 @@
         <input class="form-control" asp-for="@Model.NyPris" /><br />
         
         <label>Pizza Topping</label> 
-        <button type="button" name="action" value="TilføjTopping" class="btn btn-warning">Tilføj Topping</button> 
+        <button type="submit" name="action" value="TilføjTopping" class="btn btn-warning">Tilføj Topping</button> 
         <label>@Model.NyDescription</label>
         <input class="form-control" asp-for="@Model.NyDescription" /><br />
 
-        <input type="submit" value="Opret Ny Pizza" class="btn btn-success">
+        <button type="submit" name="action" value="OpretNyPizza" class="btn btn-success">Opret Ny Pizza</button>
     </div>
 </form>
